<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#919481"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuItems.BaseInfoFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="back_click"
        android:background="@drawable/edge_shap"
        android:src="@drawable/back_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/linkman_text"
        android:layout_width="92dp"
        android:layout_height="19dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="232dp"
        android:text="@string/link_man_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/linkman_name"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/linkman_text"
        app:layout_constraintStart_toEndOf="@+id/linkman_text"
        app:layout_constraintTop_toTopOf="@+id/linkman_text"
        app:layout_constraintVertical_bias="0.583" />

    <TextView
        android:id="@+id/telephone_no"
        android:layout_width="96dp"
        android:layout_height="27dp"
        android:layout_marginTop="64dp"
        android:text="@string/telephone_no"
        app:layout_constraintEnd_toEndOf="@+id/linkman_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linkman_text"
        app:layout_constraintTop_toBottomOf="@+id/linkman_text" />

    <EditText
        android:id="@+id/linkman_no"
        android:layout_width="165dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/telephone_no"
        app:layout_constraintEnd_toEndOf="@+id/linkman_name"
        app:layout_constraintStart_toStartOf="@+id/linkman_name"
        app:layout_constraintTop_toTopOf="@+id/telephone_no" />

    <TextView
        android:id="@+id/driver_name_text"
        android:layout_width="96dp"
        android:layout_height="28dp"
        android:layout_marginTop="76dp"
        android:text="@string/driver_name_text"
        app:layout_constraintEnd_toEndOf="@+id/telephone_no"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/telephone_no"
        app:layout_constraintTop_toBottomOf="@+id/telephone_no" />

    <EditText
        android:id="@+id/driver_name"
        android:layout_width="160dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/driver_name_text"
        app:layout_constraintEnd_toEndOf="@+id/linkman_no"
        app:layout_constraintStart_toStartOf="@+id/linkman_no"
        app:layout_constraintTop_toTopOf="@+id/driver_name_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/base_info_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>